<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="activate_all">Activate all</string>
    <string name="app_name">phyphox</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applyZoomAdvanced">Advanced options</string>
    <string name="applyZoomApply">Apply to…</string>
    <string name="applyZoomExplanation">As you are closing the interactive mode of this graph, you can select if you want to keep your zoom.</string>
    <string name="applyZoomFollow">Keep and follow new data</string>
    <string name="applyZoomKeep">Keep as selected</string>
    <string name="applyZoomReset">Reset to default</string>
    <string name="applyZoomSameAxis">Other graphs: Same axis</string>
    <string name="applyZoomSameUnit">Other graphs: Same unit</string>
    <string name="applyZoomSameVariable">Other graphs: Same variable</string>
    <string name="applyZoomThis">Only this graph</string>
    <string name="applyZoomTitle">Apply zoom</string>
    <string name="beeperCountdown">Countdown sounds</string>
    <string name="beeperRunning">Running sounds</string>
    <string name="beeperStart">Start sound</string>
    <string name="beeperStop">Stop sound</string>
    <string name="bluetooth">Bluetooth Low Energy</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_android_version">Bluetooth Low Energy is not supported on Android Versions lower than 4.3.</string>
    <string name="bt_default_error_message">There is an error with the Bluetooth device.</string>
    <string name="bt_device_not_supported">No experiment available.</string>
    <string name="bt_error_discovering">Error while discovering the services of the bluetooth device.</string>
    <string name="bt_error_reading">Error while reading characteristic with UUID</string>
    <string name="bt_error_writing">Error while writing characteristic with UUID</string>
    <string name="bt_exception_config">The value for the characteristic</string>
    <string name="bt_exception_config2">could not be set.</string>
    <string name="bt_exception_connection">Bluetooth connection could not be opened.</string>
    <string name="bt_exception_device">Error for the device with</string>
    <string name="bt_exception_device_address">address</string>
    <string name="bt_exception_device_name">name</string>
    <string name="bt_exception_disabled">Bluetooth is disabled. Please enable bluetooth and try again.</string>
    <string name="bt_exception_disconnected">The Bluetooth device has been disconnected.</string>
    <string name="bt_exception_no_connection">The Bluetooth device is not connected. Experiment can not be started.</string>
    <string name="bt_exception_notfound">Bluetooth device not found.</string>
    <string name="bt_exception_notification">The notification for the characteristic with the UUID</string>
    <string name="bt_exception_notification_disable">could not be disabled again.</string>
    <string name="bt_exception_notification_enable">could not be enabled.</string>
    <string name="bt_exception_notification_fail">was not successful.</string>
    <string name="bt_exception_notification_fail_enable">Turning on notifications for the Characteristic with the UUID</string>
    <string name="bt_exception_rate">Invalid value for rate.</string>
    <string name="calibrated_magnetometer">Use calibrated magnetometer</string>
    <string name="clear_data">Clear data</string>
    <string name="creditsApache">&lt;b>Apache POI&lt;/b>&lt;br /> Copyright 2003-2015 The Apache Software Foundation&lt;br /> &lt;br /> This product includes software developed by The Apache Software Foundation (http://www.apache.org/).&lt;br /> &lt;br /> This product contains parts that were originally based on software from BEA. Copyright (c) 2000-2003, BEA Systems, &lt;http://www.bea.com/>.&lt;br /> &lt;br /> This product contains W3C XML Schema documents. Copyright 2001-2003 (c) World Wide Web Consortium (Massachusetts Institute of Technology, European Research Consortium for Informatics and Mathematics, Keio University)&lt;br /> &lt;br /> This product contains the Piccolo XML Parser for Java (http://piccolo.sourceforge.net/). Copyright 2002 Yuval Oren.&lt;br /> &lt;br /> This product contains the chunks_parse_cmds.tbl file from the vsdump program. Copyright (C) 2006-2007 Valek Filippov (frob@df.ru)&lt;br /> &lt;br /> This product contains parts of the eID Applet project (http://eid-applet.googlecode.com). Copyright (c) 2009-2014 FedICT (federal ICT department of Belgium), e-Contract.be BVBA (https://www.e-contract.be), Bart Hanssens from FedICT&lt;br /> &lt;br /></string>
    <string name="creditsLibs">"The web-interface for remote access uses the JavaScript library \"Chart.js\" (http://chartjs.org), available under the MIT licence. For the fourier transform, we use the FFTW library (http://fftw.org), Copyright © 2003, 2007-11 Matteo Frigo, Copyright © 2003, 2007-11 Massachusetts Institute of Technology, which is available under the GNU General Public Licence (version 2 or later). GPS elevation data is converted from the WGS84 ellipsoid to the EGM84 geoid using EGM84 data (30' resolution) and a ported function from the GographicLib (https://geographiclib.sourceforge.io/, MIT/X11 licence)."</string>
    <string name="creditsNames">"Development and Concept:
 Dr. Sebastian Staacks
 Concept:
 Prof. Christoph Stampfer
 Programming:
 Dominik Dorsel
 Jonas Gessner
 Camilla Lummerzheim"</string>
    <string name="creditsPahoMQTT">&lt;b>Eclipse Paho MQTT&lt;/b>&lt;br /> MQTT communication uses the Eclipse Paho MQTT library (https://www.eclipse.org/paho), licenced under the Eclipse Distribution Licence 1.0 (please see the webpage for details on the licence and contributors). &lt;br /> &lt;br /> Eclipse Distribution License - v 1.0&lt;br /> &lt;br /> Copyright (c) 2007, Eclipse Foundation, Inc. and its licensors.&lt;br /> &lt;br /> All rights reserved.&lt;br /> &lt;br /> Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;br /> &lt;br /> Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;br /> Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;br /> Neither the name of the Eclipse Foundation, Inc. nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.&lt;br /> &lt;br /> THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS AS IS AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;br /></string>
    <string name="creditsRWTH">phyphox® has been created at the 2nd Institute of Physics at the RWTH Aachen University.</string>
    <string name="creditsZxing">&lt;b>Zxing&lt;/b>&lt;br /> The QR code scanner function uses ZXing (https://github.com/zxing/zxing), licenced under the Apache licence v2.0 (please see the webpage for details on the licence and contributors). &lt;br /> &lt;br /> NOTICES FOR BARCODE4J&lt;br /> &lt;br /> Barcode4J&lt;br /> Copyright 2002-2010 Jeremias Märki&lt;br /> Copyright 2005-2006 Dietmar Bürkle&lt;br /> &lt;br /> Portions of this software were contributed under section 5 of the&lt;br /> Apache License. Contributors are listed under:&lt;br /> http://barcode4j.sourceforge.net/contributors.html&lt;br /> &lt;br /> NOTICES FOR JCOMMANDER&lt;br /> &lt;br /> Copyright 2010 Cedric Beust cedric@beust.com</string>
    <string name="enableTimedRun">Do a timed run</string>
    <string name="export">Export Data</string>
    <string name="force_gnss">Satellite location only</string>
    <string name="gpl">Phyphox® is open source software released under the GNU General Public Licence. Please visit http://phyphox.org for further information and to get access to its source code. However, the name \"phyphox\" and \"RWTH Aachen\" are registered trademarks.</string>
    <string name="graph_tools_export">Export this dataset</string>
    <string name="graph_tools_follow">Follow new data</string>
    <string name="graph_tools_linear_fit">Linear fit</string>
    <string name="graph_tools_log_x">Logarithmic x axis</string>
    <string name="graph_tools_log_y">Logarithmic y axis</string>
    <string name="graph_tools_reset">Reset zoom</string>
    <string name="graph_tools_system_time">Convert to system time</string>
    <string name="remoteServer">Allow remote access</string>
    <string name="save_locally">Add experiment to collection</string>
    <string name="save_state">Save experiment state</string>
    <string name="share">Share screenshot</string>
    <string name="show_description">Experiment info</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timedRun">Timed run</string>
    <string name="timedRunBeeps">Acoustic signals</string>
    <string name="timedRunStartDelay">Start delay (s)</string>
    <string name="timedRunStopDelay">Experiment duration (s)</string>
    <string name="timed_start">Start timed run</string>
    <string name="timed_stop">Stop timed run</string>
</resources>