<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:theme="@style/rwth" android:orientation="vertical" android:id="@id/layout_root" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/activity_horizontal_padding" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="right" android:id="@id/rwth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/rwth" android:scaleType="fitCenter" android:adjustViewBounds="true" android:maxWidth="250.0dip" />
            <TextView android:textSize="@dimen/credit_font_main" android:id="@id/creditRWTH" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/creditsRWTH" />
            <TextView android:textSize="@dimen/credit_font_main" android:textColor="@android:color/white" android:layout_gravity="left" android:id="@id/creditNames" android:background="@color/rwth" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/creditsNames" />
            <TextView android:textSize="@dimen/credit_font" android:id="@id/gpl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lib_margin" android:text="@string/gpl" />
            <TextView android:textSize="@dimen/credit_font" android:id="@id/creditLibs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lib_margin" android:text="@string/creditsLibs" />
            <TextView android:textSize="@dimen/credit_font" android:id="@id/creditsApache" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lib_margin" android:text="@string/creditsApache" android:layout_alignParentRight="true" />
            <TextView android:textSize="@dimen/credit_font" android:id="@id/creditsZxing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lib_margin" android:text="@string/creditsZxing" android:layout_alignParentRight="true" />
            <TextView android:textSize="@dimen/credit_font" android:id="@id/creditsPahoMQTT" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lib_margin" android:text="@string/creditsPahoMQTT" android:layout_alignParentRight="true" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>