<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/phyphox"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@id/timedRunEnabled" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/enableTimedRun" />
    <TableLayout android:id="@id/timedRunTimeOptions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="0" android:shrinkColumns="1">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timedRunStartDelay" />
            <EditText android:enabled="true" android:id="@id/timedRunStartDelay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:ems="10" android:editable="false" android:inputType="numberDecimal" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timedRunStopDelay" />
            <EditText android:enabled="true" android:id="@id/timedRunStopDelay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:ems="10" android:editable="false" android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/timedRunBeepAllRow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timedRunBeeps" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <Button android:id="@id/timedRunBeepAll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TableLayout android:id="@id/timedRunBeepOptions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:stretchColumns="0" android:shrinkColumns="1">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/beeperCountdown" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/timedRunBeepCountdown" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/beeperStart" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/timedRunBeepStart" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/beeperRunning" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/timedRunBeepRunning" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/beeperStop" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/timedRunBeepStop" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</LinearLayout>