<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:padding="@dimen/activity_vertical_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/activity_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/applyZoomExplanation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomExplanation" />
        <RadioGroup android:id="@id/applyZoomMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_rowSpan="1" android:layout_columnSpan="1">
            <RadioButton android:id="@id/applyZoomReset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomReset" />
            <RadioButton android:id="@id/applyZoomKeep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/applyZoomKeep" />
        </RadioGroup>
        <GridLayout android:id="@id/applyZoomX" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:columnCount="2">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_padding" android:alpha="0.5" android:layout_rowSpan="4" android:layout_columnSpan="1" app:srcCompat="@drawable/zoom_horiz" />
            <TextView android:id="@id/applyZoomXLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:layout_marginBottom="@dimen/activity_vertical_padding" android:layout_rowSpan="1" android:layout_columnSpan="1" />
            <RadioGroup android:id="@id/applyZoomXMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_rowSpan="1" android:layout_columnSpan="1">
                <RadioButton android:id="@id/applyZoomXReset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/applyZoomReset" />
                <RadioButton android:id="@id/applyZoomXKeep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomKeep" />
                <RadioButton android:id="@id/applyZoomXFollow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomFollow" />
            </RadioGroup>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomApply" />
            <Spinner android:entries="@array/applyZoomApplyToSpinner" android:id="@id/applyZoomXApplyTo" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </GridLayout>
        <GridLayout android:id="@id/applyZoomY" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:columnCount="2">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_padding" android:alpha="0.5" android:layout_rowSpan="4" android:layout_columnSpan="1" app:srcCompat="@drawable/zoom_vert" />
            <TextView android:id="@id/applyZoomYLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:layout_marginBottom="@dimen/activity_vertical_padding" android:layout_rowSpan="1" android:layout_columnSpan="1" />
            <RadioGroup android:id="@id/applyZoomYMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_rowSpan="1" android:layout_columnSpan="1">
                <RadioButton android:id="@id/applyZoomYReset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/applyZoomReset" />
                <RadioButton android:id="@id/applyZoomYKeep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomKeep" />
            </RadioGroup>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomApply" />
            <Spinner android:entries="@array/applyZoomApplyToSpinner" android:id="@id/applyZoomYApplyTo" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </GridLayout>
        <GridLayout android:id="@id/applyZoomZ" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:columnCount="2">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_padding" android:alpha="0.5" android:layout_rowSpan="4" android:layout_columnSpan="1" app:srcCompat="@drawable/zoom_z" />
            <TextView android:id="@id/applyZoomZLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_padding" android:layout_marginBottom="@dimen/activity_vertical_padding" android:layout_rowSpan="1" android:layout_columnSpan="1" />
            <RadioGroup android:id="@id/applyZoomZMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_rowSpan="1" android:layout_columnSpan="1">
                <RadioButton android:id="@id/applyZoomZReset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/applyZoomReset" />
                <RadioButton android:id="@id/applyZoomZKeep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/applyZoomKeep" />
            </RadioGroup>
        </GridLayout>
        <androidx.appcompat.widget.SwitchCompat android:id="@id/applyZoomAdvanced" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:text="@string/applyZoomAdvanced" />
    </LinearLayout>
</ScrollView>